# markitdown-gui

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py  indexer.py  llm_discovery.py  main.py  main_window.py  markdown_cleanup.py  pdf_image_extractor.py  pdf_table_converter.py  scan_detector.py  theme.py  worker.py
